--- a/EmployeeManagment/EmployeeManagment/Views/_ViewImports.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using EmployeeManagment.Models;
 @using EmployeeManagment.Models.ViewModels;
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
