--- a/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
@@ -4,25 +4,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Employee List</h1>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Department</th>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var Employee in Model)
-        {
-            <tr>
-                <td>@Employee.Id</td>
-                <td>@Employee.Name</td>
-                <td>@Employee.Department</td>
-                <td>@Employee.Email</td>
-            </tr>
+<div class="card-deck">
+    @foreach (var employee in Model)
+    {
+        <div class="card m-3">
+            <div class="card-header">
+                <h3>@employee.Name</h3>
+            </div>
+            <img class="card-img-top" src="~/images/noimage.jpg" asp-append-version="true" /> @*Sekoj pat koga se menuva serverskata slika se stava drug hash*@
+            <div class="card-footer text-center">
+                <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a> @*Najnova Tehnika tag helpers*@
+                @* <a href="@Url.Action("details", "Home", new { id = employee.Id })" class="btn btn-primary">Show</a>
+                    @Html.ActionLink("View", "details", "Home", new { id = employee.Id ,class="btn btn-primary" })
+                    <a href="/EmployeeManagment/home/details/@employee.Id" class="btn btn-primary">View</a>*@ @*Starite nacini u mvc5 i razor*@
+                    <a href="#" class="btn btn-primary m-1">Edit</a>
+                    <a href="#" class="btn btn-danger m-1">Delete</a>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+</div>
