--- a/EmployeeManagment/EmployeeManagment/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Shared/_Layout.cshtml
@@ -3,15 +3,64 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <environment include="Development">
+        <link href="~/js/lib/Bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <script src="~/js/lib/Jquery/jquery.js"></script>
+        <script src="~/js/lib/Bootstrap/js/bootstrap.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous"
+              asp-fallback-href="~/js/lib/Bootstrap/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only"
+              asp-fallback-test-property="position"
+              asp-fallback-test-value="absolute"
+              asp-suppress-fallback-integrity="true">
+    </environment>
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link rel="icon"
+          type="image/png"
+          href="~/images/faicon.png" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="container">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+            <a class="navbar-brand" asp-action="index" asp-controller="home">
+                <img src="~/images/employee.jpg" height="30" width="30" />
+            </a>
+
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="home" asp-action="index">List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Home" asp-action="Create">Create</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
+
+        <div>
+            @RenderBody()
+        </div>
+        @if (IsSectionDefined("Scripts"))
+        {
+            RenderSection("Scripts", required: true);
+        }
     </div>
-    @if (IsSectionDefined("Scripts"))
-    {
-        RenderSection("Scripts", required: true);
-    }
 </body>
 </html>
+
+
+
+@*@inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
+    @hostingEnv.EnvironmentName*@
