--- a/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
-            <img class="card-img-top" src="~/images/noimage.jpg" asp-append-version="true" /> @*Sekoj pat koga se menuva serverskata slika se stava drug hash*@
+            <img class="card-img-top" src="~/images/unknown.jpg" asp-append-version="true" /> @*Sekoj pat koga se menuva serverskata slika se stava drug hash*@
             <div class="card-footer text-center">
                 <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a> @*Najnova Tehnika tag helpers*@
                 @* <a href="@Url.Action("details", "Home", new { id = employee.Id })" class="btn btn-primary">Show</a>
