--- a/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Employee
-
+@inject IEmployeeRepository _empRepository
 @{
     ViewBag.Title = "Create Employee";
 }
@@ -37,6 +37,12 @@
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Create</button>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+            Total Employees Count = @_empRepository.GetEmployeesAll().Count();         
         </div>
     </div>
 </form>
