Added Photo Images to the Users

--- a/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Index.cshtml
@@ -7,19 +7,17 @@
 <div class="card-deck">
     @foreach (var employee in Model)
     {
-        <div class="card m-3">
+        var imagePath = Url.Content("~/images/users/" + (employee.PhotoPath ?? "noimage.jpg"));
+        <div class="card m-3" style="min-width: 18rem; max-width:30.5%">
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
-            <img class="card-img-top" src="~/images/unknown.jpg" asp-append-version="true" /> @*Sekoj pat koga se menuva serverskata slika se stava drug hash*@
+            <img class="card-img-top imageThumbnail" src="@imagePath" asp-append-version="true" /> @*Sekoj pat koga se menuva serverskata slika se stava drug hash*@
             <div class="card-footer text-center">
                 <a asp-controller="home" asp-action="details" asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a> @*Najnova Tehnika tag helpers*@
-                @* <a href="@Url.Action("details", "Home", new { id = employee.Id })" class="btn btn-primary">Show</a>
-                    @Html.ActionLink("View", "details", "Home", new { id = employee.Id ,class="btn btn-primary" })
-                    <a href="/EmployeeManagment/home/details/@employee.Id" class="btn btn-primary">View</a>*@ @*Starite nacini u mvc5 i razor*@
-                    <a href="#" class="btn btn-primary m-1">Edit</a>
-                    <a href="#" class="btn btn-danger m-1">Delete</a>
-                </div>
+                <a href="#" class="btn btn-primary m-1">Edit</a>
+                <a href="#" class="btn btn-danger m-1">Delete</a>
             </div>
-        }
+        </div>
+    }
 </div>
