--- a/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Employee
-@inject IEmployeeRepository _empRepository
+﻿@model EmployeeCreateViewModel
+
 @{
     ViewBag.Title = "Create Employee";
 }
 
-<form asp-controller="Home" asp-action="Create" method="post" class="mt-3">
+<form enctype="multipart/form-data" asp-controller="Home" asp-action="Create" method="post" class="mt-3">
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -32,6 +32,16 @@
         </div>
     </div>
 
+    <div class="form-group row">
+        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <div class="custom-file">
+                <input asp-for="Photo" class="form-control custom-file-input" />
+                <label class="custom-file-label">Choose File...</label>
+            </div>
+        </div>
+    </div>
+
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group row">
@@ -40,10 +50,8 @@
         </div>
     </div>
 
-    <div class="form-group row">
-        <div class="col-sm-10">
-            Total Employees Count = @_empRepository.GetEmployeesAll().Count();         
-        </div>
-    </div>
+    @section Scripts{
+       <script src="~/CustomScripts/Views/CreateView.js"></script>
+    }
 </form>
 
