--- a/EmployeeManagment/EmployeeManagment/Views/Home/Details.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model HomeDetailsViewModel
 @{
     ViewBag.Title = "Details";
+    var photoPath = Url.Content("~/images/users/" + (Model.Employee.PhotoPath ?? "noimage.jpg"));   
 }
 
 <div class="row justify-content-center m-2">
@@ -11,16 +12,15 @@
                 <h1>@Model.Employee.Name</h1>
             </div>
 
-            <div class="card-body text-center">
-                <img  class="card-img-top" src="~/images/unknown.jpg"/>
-
+            <div class="card-body text-center">              
+                <img class="card-img-top" src="@photoPath" asp-append-version="true"/>              
                 <h4>Employee ID: @Model.Employee.Id</h4>
                 <h4>Email: @Model.Employee.Email</h4>
                 <h4>Department : @Model.Employee.Department</h4>
             </div>
 
             <div class="card-footer text-center">
-                <a asp-controller="home" asp-action="index" class="btn btn-primary">Back</a>             
+                <a asp-controller="home" asp-action="index" class="btn btn-primary">Back</a>
                 <a href="#" class="btn btn-primary">Edit</a>
                 <a href="#" class="btn btn-danger">Delete</a>
             </div>
