--- a/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Create.cshtml
@@ -33,10 +33,10 @@
     </div>
 
     <div class="form-group row">
-        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <label asp-for="Photos" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="custom-file">
-                <input asp-for="Photo" class="form-control custom-file-input" />
+                <input asp-for="Photos" multiple class="form-control custom-file-input" />
                 <label class="custom-file-label">Choose File...</label>
             </div>
         </div>
