--- a/EmployeeManagment/EmployeeManagment/Views/Home/Edit.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Edit.cshtml
@@ -6,10 +6,10 @@
     var imagePath = Url.Content("~/images/users/" + (Model.ExistingPhotoPath ?? "noimage.jpg"));
 }
 
-<form asp-controller="Home" asp-action="Edit" method="post">
+<form  enctype="multipart/form-data" asp-controller="Home" asp-action="Edit" method="post" class="mt-3" >
     <input type="hidden" asp-for="Id" />
     <input type="hidden" asp-for="ExistingPhotoPath" />
-
+  
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -40,13 +40,17 @@
         <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="custom-file">
-                <input asp-for="Photo" type="file" class="form-control custom-file-input" />
+                <input asp-for="Photo" class="custom-file-input form-control">
                 <label class="custom-file-label">Click here to change photo</label>
             </div>
         </div>
     </div>
 
-    <div class="form-grop row col-sm-4 offset-4"><img src="@imagePath" class="imageThumbnail" asp-append-version="true" /></div>
+    @*Display the existing employee photo*@
+    <div class="form-grop row col-sm-4 offset-4">
+        <img src="@imagePath" class="imageThumbnail" asp-append-version="true" />
+    </div>
+
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group row">
@@ -55,7 +59,6 @@
             <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Cancel</a>
         </div>
     </div>
-
 
     @section Scripts{
         <script src="~/CustomScripts/Views/EditView.js"></script>
