Exception Pages added

--- a/EmployeeManagment/EmployeeManagment/Views/Home/Details.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Home/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HomeDetailsViewModel
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Model.PageTitle;
     var photoPath = Url.Content("~/images/users/" + (Model.Employee.PhotoPath ?? "noimage.jpg"));   
 }
 
