--- a/EmployeeManagment/EmployeeManagment/Views/Shared/Error.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Shared/Error.cshtml
@@ -8,8 +8,8 @@
     An occured while processing your request.
     The support team is notified and we are working on the fix
 </h3>
-<h5>Please contact us on pragim@pragimtech.com</h5>
-<hr />
+<h5>Please contact us on darkogele@hotmail.com.com</h5>
+@*<hr />
 <h3>Exception Details:</h3>
 
 <div class="alert alert-danger">
@@ -28,5 +28,5 @@
     <h5>Exception Stack Trace</h5>
     <hr />
     <p>@ViewBag.StackTrace</p>
-</div>
+</div>*@
 
