--- a/EmployeeManagment/EmployeeManagment/Views/Shared/_Layout.cshtml
+++ b/EmployeeManagment/EmployeeManagment/Views/Shared/_Layout.cshtml
@@ -18,6 +18,10 @@
               asp-fallback-test-property="position"
               asp-fallback-test-value="absolute"
               asp-suppress-fallback-integrity="true">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+                crossorigin="anonymous"></script>
     </environment>
     <link href="~/css/site.css" rel="stylesheet" />
     <link rel="icon"
@@ -32,17 +36,22 @@
                 <img src="~/images/employee.jpg" height="30" width="30" />
             </a>
 
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="home" asp-action="index">List</a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">List</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Create">Create</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Account" asp-action="Register">Register</a>
                     </li>
                 </ul>
             </div>
